objects/ccrz__E_Subscriber_Page__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__LayoutTemplate__c</fullName>
        <description>The OOTB layout template, for example cc_tmpl_OneColRD.  If not specified then cc_tmpl_OneColRD will be used.</description>
        <label>Layout Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PageInclude__c</fullName>
        <defaultValue>&quot;cc_EmptyPage&quot;</defaultValue>
        <label>Page Include</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PageKey__c</fullName>
        <label>Page Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubscriberLayoutTemplate__c</fullName>
        <description>If cc_tmpl_SubscriberTemplate is specified as the Layout Template then this should be the specific layout template that will be used.  Otherwise this field can be left blank.</description>
        <label>Subscriber Layout Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TitleLabel__c</fullName>
        <description>The title label that the page will display</description>
        <label>Title Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Subscriber Page</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Subscriber Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Subscriber Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>